--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+ntas<!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Flashcard</title>
+    <title>Cards de perguntas</title>
 </head>
 <body>
     <main>
@@ -23,7 +23,7 @@
         </section>
     </main>
     <footer>
-        <p>Projeto desenvolvido pela Alura, sem fins lucrativos</p>
+        <p>Projeto desenvolvido por Mateus Henrique Wosniaki | Inspirado no projeto "Página web: desenvolvendo uma ferramenta interativa de estudo" da ALURA/p>
     </footer>
     <script src="app.js"></script>
     <script src="perguntas.js"></script>
