--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ ntas<!DOCTYPE html>
         </section>
     </main>
     <footer>
-        <p>Projeto desenvolvido por Mateus Henrique Wosniaki | Inspirado no projeto "Página web: desenvolvendo uma ferramenta interativa de estudo" da ALURA/p>
+        <p>Projeto desenvolvido por Mateus Henrique Wosniaki | Inspirado no projeto "Página web: desenvolvendo uma ferramenta interativa de estudo" da ALURA </p>
     </footer>
     <script src="app.js"></script>
     <script src="perguntas.js"></script>
